--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,32 +1,24 @@
+
 {
-    "theme_color": "#2196f3",
-    "background_color": "#f7f9fc",
-    "display": "standalone",
-    "scope": "/",
-    "start_url": "/",
-    "name": "Bol\u00e3o Potiguar",
-    "short_name": "Bol\u00e3o Potiguar",
-    "description": "Sua sorte come\u00e7a aqui!",
-    "icons": [
-        {
-            "src": "/icon-192x192.png",
-            "sizes": "192x192",
-            "type": "image/png"
-        },
-        {
-            "src": "/icon-256x256.png",
-            "sizes": "256x256",
-            "type": "image/png"
-        },
-        {
-            "src": "/icon-384x384.png",
-            "sizes": "384x384",
-            "type": "image/png"
-        },
-        {
-            "src": "/icon-512x512.png",
-            "sizes": "512x512",
-            "type": "image/png"
-        }
-    ]
+  "name": "Bolão Potiguar",
+  "short_name": "Bolão Potiguar",
+  "start_url": "/",
+  "display": "standalone",
+  "background_color": "#115E59",
+  "theme_color": "#10B981",
+  "description": "Sua sorte começa aqui!",
+  "icons": [
+    {
+      "src": "/logo.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/logo.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
+    }
+  ]
 }
