--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "theme_color": "#10B981",
-  "background_color": "#1f2937",
+  "background_color": "#1F2937",
   "display": "standalone",
   "scope": "/",
   "start_url": "/",
@@ -9,22 +9,22 @@
   "description": "Sua sorte começa aqui!",
   "icons": [
     {
-      "src": "/logo-192.png",
+      "src": "/icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/logo-256.png",
+      "src": "/icons/icon-256x256.png",
       "sizes": "256x256",
       "type": "image/png"
     },
     {
-      "src": "/logo-384.png",
+      "src": "/icons/icon-384x384.png",
       "sizes": "384x384",
       "type": "image/png"
     },
     {
-      "src": "/logo-512.png",
+      "src": "/icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
