entao nao esta ocorrendo isso, ao testa nao aconteceu

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,16 +4,17 @@
   "description": "Sua sorte começa aqui!",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#115E59",
+  "background_color": "#10B981",
   "theme_color": "#10B981",
+  "scope": "/",
   "icons": [
     {
-      "src": "/logo.png",
+      "src": "/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/logo.png",
+      "src": "/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
