--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,21 +2,21 @@
   "name": "Bolão Potiguar",
   "short_name": "Bolão Potiguar",
   "description": "Sua sorte começa aqui!",
-  "start_url": "/",
-  "display": "standalone",
-  "background_color": "#10B981",
-  "theme_color": "#10B981",
-  "scope": "/",
   "icons": [
     {
-      "src": "/icon-192x192.png",
+      "src": "/icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/icon-512x512.png",
+      "src": "/icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
-  ]
+  ],
+  "theme_color": "#10B981",
+  "background_color": "#1f2937",
+  "start_url": "/",
+  "display": "standalone",
+  "scope": "/"
 }
