--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,50 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
+# Dependencies
 /node_modules
 /.pnp
 .pnp.js
-.yarn/install-state.gz
 
-# testing
+# Testing
 /coverage
 
-# next.js
-/.next/
-/out/
+# Next.js build output
+/.next
+/out
 
-# production
+# Production
 /build
 
-# misc
+# Vercel
+.vercel
+
+# Static exports
+/export
+
+# Misc
 .DS_Store
 *.pem
 
-# debug
+# Log files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
+pnpm-debug.log*
 
-# local env files
-.env*.local
-.env
+# Local environment variables
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# IDE files
+.vscode/
+.idea/
 
 # Firebase
-src/lib/firebase-service-account.json
+*-debug.log
+.firebase
+firestore.rules.bak
+database.rules.json.bak
+storage.rules.bak
+firebase-debug.log
