--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,34 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Firebase
-src/lib/firebase-service-account.json
-# End Firebase
-
-# Dependencies
+# dependencies
 /node_modules
 /.pnp
 .pnp.js
 
-# Testing
+# testing
 /coverage
 
-# Next.js
+# next.js
 /.next/
 /out/
 
-# Production
+# production
 /build
 
-# Misc
+# misc
 .DS_Store
 *.pem
 
-# Debug
+# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Local Environment Variables
-.env*.local
-.env
+# local env files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# TypeScript
-*.tsbuildinfo
-next-env.d.ts
+# firebase
+/src/lib/firebase-service-account.json
