--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,10 +1,21 @@
-
 {
   "name": "Bolão Potiguar",
-  "short_name": "Bolão Potiguar",
+  "short_name": "Bolão",
+  "description": "Sua sorte começa aqui!",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#228B22",
-  "theme_color": "#228B22",
-  "description": "Sua sorte começa aqui!"
+  "background_color": "#1e40af",
+  "theme_color": "#2563eb",
+  "icons": [
+    {
+      "src": "/logo.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/logo.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
 }
