--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,21 +1,17 @@
 {
   "name": "Bolão Potiguar",
-  "short_name": "Bolão",
+  "short_name": "BOLÃO POTIGUAR",
   "description": "Sua sorte começa aqui!",
-  "start_url": "/",
-  "display": "standalone",
-  "background_color": "#1e40af",
-  "theme_color": "#2563eb",
   "icons": [
-    {
-      "src": "/logo-512.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
     {
       "src": "/logo-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
-  ]
+  ],
+  "theme_color": "#15803d",
+  "background_color": "#15803d",
+  "display": "standalone",
+  "scope": "/",
+  "start_url": "/"
 }
