--- a/package.json
+++ b/package.json
@@ -51,7 +51,6 @@
     "lucide-react": "^0.475.0",
     "next": "15.2.3",
     "next-pwa": "^5.6.0",
-    "next-themes": "^0.3.0",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -62,7 +61,8 @@
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "next-themes": "^0.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
