--- a/public/manifest.json
+++ b/public/manifest.json
@@ -14,8 +14,8 @@
       "type": "image/png"
     }
   ],
-  "theme_color": "#228B22",
-  "background_color": "#FFFFFF",
+  "theme_color": "#15803d",
+  "background_color": "#ffffff",
   "start_url": "/",
   "display": "standalone"
 }
