--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,12 @@
 {
-  "name": "Bolão Potiguar",
-  "short_name": "Bolão Potiguar",
-  "description": "Sua sorte começa aqui!",
+  "theme_color": "#15803d",
+  "background_color": "#ffffff",
+  "display": "standalone",
+  "scope": "/",
+  "start_url": "/",
+  "name": "Bol\u00e3o Potiguar",
+  "short_name": "Bol\u00e3o Potiguar",
+  "description": "Sua sorte come\u00e7a aqui!",
   "icons": [
     {
       "src": "/logo-192.png",
@@ -9,13 +14,19 @@
       "type": "image/png"
     },
     {
+      "src": "/logo-256.png",
+      "sizes": "256x256",
+      "type": "image/png"
+    },
+    {
+      "src": "/logo-384.png",
+      "sizes": "384x384",
+      "type": "image/png"
+    },
+    {
       "src": "/logo-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
-  ],
-  "theme_color": "#15803d",
-  "background_color": "#ffffff",
-  "start_url": "/",
-  "display": "standalone"
+  ]
 }
